--- a/Lab1.vcxproj
+++ b/Lab1.vcxproj
@@ -167,6 +167,10 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mesh.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="fragment_shader.txt" />
+    <Text Include="vertex_shader.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
