--- a/Lab1.vcxproj.filters
+++ b/Lab1.vcxproj.filters
@@ -40,11 +40,19 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="vertex_shader.txt">
+    <Text Include="default_fragment.glsl">
       <Filter>Header Files</Filter>
     </Text>
-    <Text Include="fragment_shader.txt">
+    <Text Include="default_vertex.glsl">
       <Filter>Header Files</Filter>
     </Text>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="cartoon_fragment.glsl">
+      <Filter>Header Files</Filter>
+    </None>
+    <None Include="cartoon_vertex.glsl">
+      <Filter>Header Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
