added stupid shader

--- a/Lab1.vcxproj.filters
+++ b/Lab1.vcxproj.filters
@@ -54,5 +54,8 @@
     <None Include="cartoon_vertex.glsl">
       <Filter>Header Files</Filter>
     </None>
+    <None Include="stupid_fragment.glsl">
+      <Filter>Header Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
