--- a/Lab1.vcxproj.filters
+++ b/Lab1.vcxproj.filters
@@ -63,5 +63,11 @@
     <None Include="stupid_fragment.glsl">
       <Filter>Header Files</Filter>
     </None>
+    <None Include="light_vertex.glsl">
+      <Filter>Header Files</Filter>
+    </None>
+    <None Include="light_fragment.glsl">
+      <Filter>Header Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
