--- a/Lab1.vcxproj.filters
+++ b/Lab1.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="renderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="material.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="algebra.cpp">
