--- a/~AutoRecover.Lab1.vcxproj
+++ b/~AutoRecover.Lab1.vcxproj
@@ -159,6 +159,7 @@
   <ItemGroup>
     <ClInclude Include="algebra.h" />
     <ClInclude Include="light.h" />
+    <ClInclude Include="material.h" />
     <ClInclude Include="mesh.h" />
     <ClInclude Include="renderer.h" />
     <ClInclude Include="shaders.h" />
