--- a/Lab1.vcxproj
+++ b/Lab1.vcxproj
@@ -160,6 +160,7 @@
     <ClInclude Include="algebra.h" />
     <ClInclude Include="keys.h" />
     <ClInclude Include="light.h" />
+    <ClInclude Include="loader.h" />
     <ClInclude Include="material.h" />
     <ClInclude Include="mesh.h" />
     <ClInclude Include="player.h" />
@@ -170,6 +171,7 @@
     <ClCompile Include="algebra.cpp" />
     <ClCompile Include="keys.cpp" />
     <ClCompile Include="light.cpp" />
+    <ClCompile Include="loader.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mesh.cpp" />
     <ClCompile Include="player.cpp" />
